# study-scheduler

./: .gitignore  AGENTS.md  README.md
backend/: Cargo.toml
backend/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  priority.rs  routes.rs  scheduler.rs
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  schedulerUi.test.ts  schedulerUi.ts  types.ts
scripts/: install-studytime
